# diff-prom-series

./: .gitignore  .justfile  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  dist-workspace.toml
.github/workflows/: release.yml
src/: args.rs  diff.rs  fs.rs  main.rs  view.rs
src/prometheus/: mod.rs  model.rs
