[package]
name = "diff-prom-series"
version = "0.1.0"
authors = ["Wataru Matsui <watawuwu@3bi.tech>"]
readme = "README.md"
edition = "2021"
license = "MIT OR Apache-2.0"
description = ""
repository = "https://github.com/watawuwu/diff-prom-series"
keywords = [""]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
log = "0"
pretty_env_logger = "0"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored_json = "5"
strum = { version = "0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
reqwest = { version = "0", features = ["json", "blocking", "rustls-tls"] }

[profile.release]
strip = true
